--- a/qsenseapp/Web.config
+++ b/qsenseapp/Web.config
@@ -15,8 +15,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-qsenseapp-20140820104743.mdf;Initial Catalog=aspnet-qsenseapp-20140820104743;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="qSenseDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\qsensedb.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\qsensedb.mdf;Initial Catalog=aspnet-qsenseapp-20140820104743;Integrated Security=True" providerName="System.Data.SqlClient" />
+   
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
